--- a/templates/404.html
+++ b/templates/404.html
@@ -17,8 +17,8 @@ var CSSReload={head:null,init:function(){this._storeHead(),this._listenToPostMes
 
 <style class="cp-pen-styles">@import url(https://fonts.googleapis.com/css?family=opensans:500);
 body{
-                background: #33cc99;
-                color:#fff;
+                background: #ccffe6;
+                color:#000;
                 font-family: 'Open Sans', sans-serif;
                 max-height:700px;
                 overflow: hidden;
@@ -67,7 +67,7 @@ body{
            
 
             .btn{
-                background-color: rgb( 255, 255, 255 );
+                background-color: #000;
                 position: relative;
                 display: inline-block;
                 width: 358px;
@@ -75,7 +75,7 @@ body{
                 z-index: 5;
                 font-size: 25px;
                 margin:0 auto;
-                color:#33cc99;
+                color:#ccffe6;
                 text-decoration: none;
                 margin-right: 10px
             }
@@ -87,8 +87,8 @@ body{
             hr{
                 padding: 0;
                 border: none;
-                border-top: 5px solid #fff;
-                color: #fff;
+                border-top: 5px solid #000;
+                color: #000;
                 text-align: center;
                 margin: 0px auto;
                 width: 420px;
@@ -103,13 +103,13 @@ body{
                 top: -0.75em;
                 font-size: 2em;
                 padding: 0 0.2em;
-                background: #33cc99;
+                background: #ccffe6;
             }
             
             .cloud {
                 width: 350px; height: 120px;
 
-                background: #FFF;
+                background: #020202;
                 background: linear-gradient(top, #FFF 100%);
                 background: -webkit-linear-gradient(top, #FFF 100%);
                 background: -moz-linear-gradient(top, #FFF 100%);
@@ -129,7 +129,7 @@ body{
             .cloud:after, .cloud:before {
                 content: '';
                 position: absolute;
-                background: #FFF;
+                background: #020202;
                 z-index: -1
             }
 
