--- a/templates/404.html
+++ b/templates/404.html
@@ -250,7 +250,7 @@ body{
             <hr>
             <div class='_1'>PAGE</div>
             <div class='_2'>WAS NOT FOUND</div>
-            <a class='btn' href='#'>BACK TO SITE</a>
+            <a class='btn' href='/'>BACK TO SITE</a>
         </div>
 
 </body></html>
