--- a/templates/login.html
+++ b/templates/login.html
@@ -143,7 +143,7 @@ body {
 
 </style></head><body>
   <!-- fieldsets -->
-  <form action="/register" method="POST" id="msform">
+  <form action="/login" method="POST" id="msform">
     <h2 class="fs-title">Log into your account</h2>
     <h3 class="fs-subtitle">Visit your profile and share posts to your followers</h3>
     <input type="text" name="username" placeholder="Nick" />
