--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,32 @@
-{% if 'username' in session %}
-<h1>Hello, {{ session['username'] }}!</h1>
-{% else %}
-<h1>Register to use</h1>
-{% endif %}
-<a href="/register">Register</a>
-<a href="/login">Login</a>
+<!doctype html>
 
-<div id="posts">
-</div>
+<html lang="en">
+	<head>
+	  <meta charset="utf-8">
+
+	  <title> Hackathon 2018</title>
+	  <meta name="description" content="">
+	  <meta name="keywords" content="">
+
+	  <link rel="stylesheet" href="/static/css/styles.css" type="text/css">
+	  <link rel="stylesheet" href="bootstrap.min" type="text/css">
+	  <link rel="stylesheet" href="bootstrap-reboot.min" type="text/css">
+	  <link rel="stylesheet" href="bootstrap.-grid" type="text/css">
+	  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	  <script src="js/scripts.js"></script>
+
+	</head>
+	<body>
+	<div id="container">
+		<div id="content">
+			<div class="break"></div>
+			<div id="image"> </div>
+			<div class="break"></div>
+			<div id="user"> </div>
+		
+		</div>
+	</div>
+			
+		
+	</body>
+</html>
