--- a/templates/500.html
+++ b/templates/500.html
@@ -249,8 +249,8 @@ body{
             <div class='_404'>500</div>
             <hr>
             <div class='_1'>INTERNAL</div>
-            <div class='_2'>WAS NOT FOUND</div>
-            <a class='btn' href='/'>SERVER ERROR</a>
+            <div class='_2'>SERVER ERROR</div>
+            <a class='btn' href='/'>BACK TO SITE</a>
         </div>
 
 </body></html>
