--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,6 +8,7 @@ body{
 	background-color: #33cc99;
 }
 #content{
+	text-align: center;
 	width:50vw;
 	background-color: white;
 	height: 100vh;
@@ -25,13 +26,11 @@ body{
 	margin-left: auto;
 	margin-right: auto;
 	
-	
 }
 #user{
 	width:40vw;
 	margin-left: auto;
 	margin-right: auto;
-	height: 150px;
 	padding-bottom: 10px;
 	border-bottom: dotted 2px #33cc99;
 	
@@ -39,4 +38,10 @@ body{
 .break{
 	width:50vw;
 	height: 30px;
+}
+
+textarea {
+	width:30vw;
+	height: 10vh;
+	resize: none;
 }
