--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,1 +1,36 @@
-<h1>Hello, {{ username }}</h1>
+<!doctype html>
+
+<html lang="en">
+	<head>
+	  <meta charset="utf-8">
+
+	  <title> Hackathon 2018</title>
+	  <meta name="description" content="">
+	  <meta name="keywords" content="">
+
+	  <link rel="stylesheet" href="/static/css/styles.css" type="text/css">
+	  <link rel="stylesheet" href="bootstrap.min" type="text/css">
+	  <link rel="stylesheet" href="bootstrap-reboot.min" type="text/css">
+	  <link rel="stylesheet" href="bootstrap.-grid" type="text/css">
+	  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	  <script src="js/scripts.js"></script>
+
+	</head>
+	<body>
+	<div id="container">
+		<div id="content">
+			<img id="image" src="{{ info['avatar'] }}">
+			<div id="username">@{{ info['username'] }}</div>
+			<div id="user"></div>
+			{% if 'username' in session %}
+				<form action="/post" method="POST">
+					<textarea placeholder="Post" name="post"></textarea>
+					<input type="submit" value="Send post">
+				</form>
+			{% endif %}
+		</div>
+	</div>
+			
+		
+	</body>
+</html>
