--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,6 +28,17 @@
 					<input type="submit" value="Send post">
 				</form>
 			{% endif %}
+			{% for post in posts %}
+				<div class="post">
+					<img src="{{ info['avatar'] }}" class="postavatar">
+					<span class="postname">@{{ info['username'] }}</span>
+					<div class="posttime">{{ post[3] }}</div>
+					<div class="postcontent">
+						{{ post[2]}}
+					</div>
+					
+				</div><div id="user"></div>
+			{% endfor %}
 		</div>
 	</div>
 			
