--- a/templates/settings.html
+++ b/templates/settings.html
@@ -143,7 +143,7 @@ body {
 
 </style></head><body>
   <!-- fieldsets -->
-  <form action="/settings" method="POST" id="msform">
+  <form action="/profile/settings" method="POST" id="msform">
     <h2 class="fs-title">Change your profile</h2>
     <h3 class="fs-subtitle">You can edit your password and avatar below</h3>
     <input type="text" name="avatar" placeholder="Avatar" value="{{ avatar }}">
