--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,7 +5,11 @@ body{
 #container{
 	height:100vh;
 	width: 100vw;
-	background-color: #33cc99;
+	html {
+	height: 100%;
+	background: 
+		linear-gradient(rgba(249, 9, 38, 0.8), rgba(249, 240, 38, 0.8));
+
 }
 #content{
 	text-align: center;
