--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,6 +21,11 @@
 		<div id="content">
 			<img id="image" src="{{ info['avatar'] }}">
 			<div id="username">@{{ info['username'] }}</div>
+			{% if 'username' in session %}
+				<a href="/profile/settings">Settings</a>
+			{% else %}
+				<a href="/profile/{{ info['username']}}/follow">Follow</a>
+			{% endif %}
 			<div id="user"></div>
 			{% if 'username' in session %}
 				<form action="/post" method="POST">
@@ -36,7 +41,7 @@
 					<div class="postcontent">
 						{{ post[2]}}
 					</div>
-					
+
 				</div><div id="user"></div>
 			{% endfor %}
 		</div>
