--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,8 +21,8 @@ body{
 	height: 100vh;
 	margin-left: auto;
 	margin-right: auto;
-	border-left: 2px solid #1aaf7d;
-	border-right: 2px solid #1aaf7d;
+	border-left: 2px solid rgba(249, 9, 38, 1);
+	border-right: 2px solid rgba(249, 9, 38, 1);
 
 }
 #image{
