--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,7 +30,7 @@ body{
 	text-align: center;
 	height: 128px;
 	width: 128px;
-	border: 2px solid #33cc99;
+	border: 2px solid rgba(249, 9, 38, 1);
 	margin-left: auto;
 	margin-right: auto;
 	
@@ -40,7 +40,7 @@ body{
 	margin-left: auto;
 	margin-right: auto;
 	padding-bottom: 10px;
-	border-bottom: dotted 2px #33cc99;
+	border-bottom: dotted 2px rgba(249, 9, 38, 1);
 	
 }
 
