--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,28 @@
 	<body>
 	<div id="container">
 		<div id="content">
-			<div id="user"></div>
+			
 			{% if 'username' in session %}
-				<div id="posts"></div>
+				<a href="/profile/{{session['username']}}">Your profile</a> or <a href="/logout">Log out</a>
 			{% else %}
 				<a href="/register">Register</a> or <a href="/login">Login</a>
+			{% endif %}
+			<div id="user"></div>
+			{% if following != None %}
+				{% for follow in following %}
+					{% for post in db.get_user_posts(follow) %}
+					{% set info = db.get_user_info(follow) %}
+										<div class="post">
+					<img src="{{ info['avatar'] }}" class="postavatar">
+					<span class="postname">@{{ info['username'] }}</span>
+					<div class="posttime">{{ post[3] }}</div>
+					<div class="postcontent">
+						{{ post[2]}}
+					</div>
+					<div id="user"></div>
+				</div>
+					{% endfor %}
+				{% endfor %}
 			{% endif %}
 		</div>
 	</div>
